SFUSA/force-app/main/default/objects/Sample_Kit_Shipping_Address__c/fields/City__c.field-meta.xml
<CustomField>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>