SFUSA/force-app/main/default/objects/Sample_Kit_Shipping_Address__c/fields/Company__c.field-meta.xml
<CustomField>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>