SFUSA/force-app/main/default/objects/Sample_Kit_Shipping_Address__c/listViews/All_Sample_Kit_Shipping_Addresses.listView-meta.xml
<ListView>
        <fullName>All_Sample_Kit_Shipping_Addresses</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Country__c</columns>
        <columns>Legal_to_receive_Sample_Kit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Sample Kit Shipping Addresses</label>
        <language>en_US</language>
    </ListView>